--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad-buscar.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad-buscar.xhtml
@@ -7,7 +7,8 @@
                 xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
                 xmlns:pa="http://xmlns.jcp.org/jsf/composite/paginacion">
     <f:metadata>
-        <f:viewParam name="grupo" value="#{asignarActividadBuscarControlador.grupo}" converter="tecolotl.web.UUIDConverter"/>
+        <f:viewParam name="grupo" value="#{asignarActividadBuscarControlador.grupo}"/>
+        <f:viewAction action="#{asignarActividadBuscarControlador.inicio()}"/>
     </f:metadata>
     <ui:define name="menu">
 
@@ -39,12 +40,21 @@
             </h:inputText>
             <h:message for="entrada-busqueda" styleClass="uk-text-danger"/>
             <h:commandButton value="${boton['search']}" styleClass="boton-escuadron-base">
-                <f:ajax execute="@form" listener="#{asignarActividadBuscarControlador.busca()}" render="@form tareas" onevent="function link(data){
+                <f:ajax execute="@form" listener="#{asignarActividadBuscarControlador.busca()}" render="@form tareas formulario-asignartarea" onevent="function link(data){
                     if(data.status === 'success'){
                         generateLinks();
                     }
                 }"/>
             </h:commandButton>
+        </h:form>
+        <h:form id="formulario-asignartarea">
+            <h:inputHidden id="actvidad" value="#{asignarActividadBuscarControlador.actividad}"/>
+            <h:inputHidden id="ver-tarea" value="#{asignarActividadBuscarControlador.verTarea}"/>
+            <h:commandButton id="boton-asignar"
+                             disabled="${empty asignarActividadBuscarControlador.actividadModeloMapa}"
+                             value="#{profesor['activity.assign']}"
+                             onclick="return buscaSeleccion()"
+                             action="#{asignarActividadBuscarControlador.asignar()}"/>
         </h:form>
         <h:panelGroup id="tareas" layout="block" styleClass="uk-grid uk-child-width-1-3@m" pt:uk-grid="">
             <ui:repeat value="#{asignarActividadBuscarControlador.actividadModeloMapa.keySet()}" var="nivel">
@@ -59,7 +69,7 @@
                                     </div>
                                     <span class="uk-text-center uk-text-bold">#{actividadModelo.lenguaje}</span>
                                     <div class="uk-text-right">
-                                        <input type="radio" name="#{nivel}" class="uk-radio" value="#{actividadModelo.idVideo}"/>
+                                        <input type="radio" name="tarea" class="uk-radio" value="#{actividadModelo.idVideo}"/>
                                         <input class="uk-checkbox" type="checkbox"></input>
                                     </div>
                                 </div>
