estilos modulo profesor , coordinador nombre vista reporte-sesion.xhtml y conteo de desactivados modulo administracion

--- a/tecolotl-web/src/main/webapp/administracion/alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/alumnos.xhtml
@@ -29,13 +29,14 @@
                 <button class="uk-text-capitalize uk-button uk-button-primary uk-button-small">limpiar busqueda</button>
             </div>
         </div>
-        <h:form id="content-groups">
+        <h3 id="all-students-disabled">Total alumnos desactivados: <span/></h3>
+        <h:form id="content-groups" >
             <div class="uk-grid-small uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid="">
                 <ui:repeat value="#{alumnosControlador.mapa.keySet()}" var="grupoBusquedaModelo">
                     <div class="uk-card uk-card-default uk-card-small uk-card-hover tabla">
                         <div class="uk-card-header uk-flex uk-flex-between">
                             <span class="uk-text-bold uk-display-inline-block primera-mayuscula">grupo: ${grupoBusquedaModelo.grado} ${grupoBusquedaModelo.grupo}</span>
-                            <span class="uk-text-bold uk-display-inline-block primera-mayuscula">total: ${alumnosControlador.mapa.get(grupoBusquedaModelo).size()}</span>
+                            <span class="uk-text-bold uk-display-inline-block uk-text-capitalize"><span/>   Total: ${alumnosControlador.mapa.get(grupoBusquedaModelo).size()}</span>
                         </div>
                         <div class="uk-card-body" style="max-height: 400px; overflow: auto;">
                             <ui:fragment rendered="${empty alumnosControlador.mapa.get(grupoBusquedaModelo)}">
@@ -70,7 +71,12 @@
                                     <f:facet name="header">estatus</f:facet>
                                     <h:commandButton styleClass="uk-button ${alumnoBusquedaModelo.estatus ? 'uk-button-primary' : 'uk-button-danger'}  uk-button-small" value="${alumnoBusquedaModelo.estatus ? 'desactivar' : 'activar'}">
                                         <f:ajax listener="#{alumnosControlador.actiliza(alumnoBusquedaModelo.idAlumno, not alumnoBusquedaModelo.estatus)}"
-                                                render="@form"/>
+                                                render="@form"
+                                                onevent="function load(data){
+                                                    if (data.status === 'success'){
+                                                        updateCount();
+                                                    }
+                                                }"/>
                                     </h:commandButton>
                                 </h:column>
                             </h:dataTable>
