--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -57,6 +57,7 @@
                                     <span>#{coordinador['teacher.detail.table.grup.platform.time']}</span>
                                     <f:param value="#{profesorGrupoAlumnoModelo.id}" name="profesor"/>
                                     <f:param value="tiempo" name="zona"/>
+                                    <f:param value="#{profesorGrupoAlumnoModelo.nombre} #{profesorGrupoAlumnoModelo.apellidoPaterno} #{profesorGrupoAlumnoModelo.apellidoMaterno}" name="usuario"/>
                                 </h:link>
                             </li>
                         </ul>
