--- a/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
@@ -41,7 +41,7 @@
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/coordinador/template-coordinador.css"/>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/datepicker.css"/>
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/coordinador/reporte-sesion.css"/>
-            <h1 class="uk-margin-medium-bottom">#{otrosboton['report']}</h1>
+            <h2 class="uk-margin-medium-bottom uk-text-capitalize">#{otrosboton['report']} <span>#{param["usuario"]}</span></h2>
             <h:form id="formulario-fechas">
                 <div id="rango-fecha">
                     <h:inputText styleClass="uk-input" value="#{reporteSesionControlador.fechaInicio}">
