--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -82,11 +82,11 @@
                                          style="display: none">
                         </h:commandButton>
                     </h:form>
-                    <h:button value="#{boton['back']}" styleClass="uk-button uk-margin-small-right boton-escuadron-base" style="background-color: var(--color-nav-primary)" outcome="dashboard"/>
-                    <h:button value="all activity" styleClass="uk-button uk-margin-small-right boton-escuadron-base" outcome="todas-actividades" rendered="${not empty param['grupo']}">
+                    <h:button value="#{boton['back']}" styleClass="uk-margin-small-right boton-escuadron-base" style="background-color: var(--color-nav-primary)" outcome="dashboard"/>
+                    <h:button value="all activity" styleClass="uk-margin-small-right boton-escuadron-base" outcome="todas-actividades" rendered="${not empty param['grupo']}">
                         <f:param name="grupo" value="${asignarActividadControlador.grupo}"/>
                     </h:button>
-                    <button class="uk-button boton-escuadron-base" onclick="buscaActividadSeleccionada(event)">#{profesor['activity.assign']}</button>
+                    <button class="boton-escuadron-base" onclick="buscaActividadSeleccionada(event)">#{profesor['activity.assign']}</button>
                 </div>
                 <ul  class="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" uk-grid="">
                     <ui:repeat value="#{asignarActividadControlador.actividadModeloLista}" var="actividadModelo">
