estilos card modulo profesor asignar-actividad-buscar.xhtml, se coloco numero de alumnos activados y descativador modulo administracion alumnos.xhtml

--- a/tecolotl-web/src/main/webapp/administracion/alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/alumnos.xhtml
@@ -29,7 +29,7 @@
                 <button class="uk-text-capitalize uk-button uk-button-primary uk-button-small">limpiar busqueda</button>
             </div>
         </div>
-        <h3 id="all-students-disabled">Total alumnos desactivados: <span/></h3>
+        <h3 id="all-students-disabled">Total alumnos Activados / Desactivados: <span/></h3>
         <h:form id="content-groups" >
             <div class="uk-grid-small uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid="">
                 <ui:repeat value="#{alumnosControlador.mapa.keySet()}" var="grupoBusquedaModelo">
