--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad-buscar.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad-buscar.xhtml
@@ -80,7 +80,7 @@
                                         <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/mounstro/3ojos.svg" alt="3ojos" width="30" height="30" style="border-radius: 150px"/>
                                         <span class="cat-txt">#{nivel}</span>
                                     </div>
-                                    <span class="uk-text-center uk-text-bold">#{actividadModelo.temaModelo.valor}</span>
+                                    <span class="uk-text-center uk-text-bold">#{actividadModelo.lenguaje}</span>
                                     <div class="uk-text-right">
                                         <input type="radio" name="tarea" class="uk-radio" value="#{actividadModelo.idVideo}"/>
                                         <input class="uk-checkbox" type="checkbox"/>
@@ -90,6 +90,7 @@
                                         <img src="https://i.ytimg.com/vi/#{actividadModelo.idVideo}/mqdefault.jpg" alt=""/>
                                 </h:panelGroup>
                                 <div class="uk-card-body uk-text-center">
+                                    <span class="activity-theme-text">#{actividadModelo.temaModelo.valor}</span>
                                    <span class="question-tag">#{actividadModelo.preguntaDetonadora}</span>
                                 </div>
                                 <div class="uk-card-footer" data-actividad="#{actividadModelo.idVideo}">
