--- a/tecolotl-web/src/main/webapp/administracion/alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/alumnos.xhtml
@@ -29,9 +29,28 @@
                 <button class="uk-text-capitalize uk-button uk-button-primary uk-button-small">limpiar busqueda</button>
             </div>
         </div>
-        <h3 id="all-students-disabled">Total alumnos Activados / Desactivados: <span/></h3>
+        <h3 id="all-students-disabled">Total alumnos Activados:  <span/> / Desactivados: <span/></h3>
         <h:form id="content-groups" >
-            <div class="uk-grid-small uk-child-width-1-1@s uk-child-width-1-2@m" uk-grid="">
+            <h:panelGroup layout="block" rendered="#{alumnosControlador.mapa.keySet().size() le 0}">
+                <table class="uk-table" style="border: 1px solid #4a4a4a">
+                    <thead class="uk-background-primary">
+                    <tr>
+                        <th class="letra-titulo uk-text-center">nombre</th>
+                        <th class="letra-titulo uk-text-center">status</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td colspan="2">
+                            <div class="uk-flex uk-flex-center">
+                                <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/vacio.svg" alt="vacio" height="215" width="243"/>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </h:panelGroup>
+            <h:panelGroup layout="block" styleClass="uk-grid-small uk-child-width-1-1@s uk-child-width-1-2@m" pt:uk-grid="" rendered="#{alumnosControlador.mapa.keySet().size() gt 0}">
                 <ui:repeat value="#{alumnosControlador.mapa.keySet()}" var="grupoBusquedaModelo">
                     <div class="uk-card uk-card-default uk-card-small uk-card-hover tabla">
                         <div class="uk-card-header uk-flex uk-flex-between">
@@ -84,7 +103,7 @@
                         <div class="uk-card-footer"></div>
                     </div>
                 </ui:repeat>
-            </div>
+            </h:panelGroup>
         </h:form>
     </ui:define>
     <ui:define name="file-js">
