filtro modulo administracion alumnos.xhtml y estilos boton busqueda modulo profesor

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad-buscar.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad-buscar.xhtml
@@ -53,7 +53,7 @@
         <h:panelGroup layout="block"  styleClass="uk-margin-medium-bottom uk-hidden">
             <ul uk-accordion="">
                 <li>
-                    <a class="uk-accordion-title uk-text-uppercase" href="#">scope and sequence</a>
+                    <a class="uk-accordion-title boton-escuadron-base" href="#">scope and sequence</a>
                     <div class="uk-accordion-content filter-activities " id="activity-theme" >
 
                     </div>
