--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -124,7 +124,7 @@
                                     <option value="todos">All</option>
                                 </select>
                                 <span id="tareas-asignadas" class="uk-margin-medium-right">#{profesor['total.filters.assigned']}<span>0</span></span>
-                                <span id="tareas-promediadas" class="uk-margin-medium-right">#{profesor['total.filters.task']} <span>0</span></span>
+                                <span id="tareas-promediadas" class="uk-margin-medium-right uk-hidden">#{profesor['total.filters.task']} <span>0</span></span>
                                 <span id="promedio-general" class="uk-margin-medium-right">#{profesor['total.filters.average']} <span>0</span></span>
                                 <div class="uk-overflow-auto">
                                 <h:form id="formulario-tabla-actividades">
