Muestra el signo de % correctamente

--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -285,21 +285,21 @@
                                         <tr>
                                             <td class="uk-text-left">#{profesor['tareas.alumno.map.comprehension']}</td>
                                             <td>
-                                               <h:outputText rendered="#{promedioAlumnoModelo.promedioRelacionarOracion ne null}"  value=" #{promedioAlumnoModelo.promedioRelacionarOracion}"/>%
+                                               <h:outputText rendered="#{promedioAlumnoModelo.promedioRelacionarOracion ne null}"  value=" #{promedioAlumnoModelo.promedioRelacionarOracion} %"/>
                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioRelacionarOracion eq null}"  styleClass="uk-icon" pt:uk-icon="ban"/>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="uk-text-left">#{profesor['tareas.alumno.table.games']}</td>
                                             <td>
-                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioGramatica ne null}" value="${promedioAlumnoModelo.promedioGramatica}"/>%
+                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioGramatica ne null}" value="${promedioAlumnoModelo.promedioGramatica} %"/>
                                                 <h:outputText rendered="#{promedioAlumnoModelo.promedioGramatica eq null}" styleClass="uk-icon" pt:uk-icon="ban"/>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="uk-text-left">#{profesor['tareas.alumno.transcript']}</td>
                                             <td>
-                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioTranscipcion ne null}" value="${promedioAlumnoModelo.promedioTranscipcion}"/>%
+                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioTranscipcion ne null}" value="${promedioAlumnoModelo.promedioTranscipcion} %"/>
                                                 <h:outputText rendered="#{promedioAlumnoModelo.promedioTranscipcion eq null}" styleClass="uk-icon" pt:uk-icon="ban"/>
                                             </td>
                                         </tr>
@@ -307,21 +307,21 @@
                                         <tr>
                                             <td class="uk-text-left">#{profesor['tareas.alumno.map.happened']}</td>
                                             <td>
-                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioOraciones ne null}" value="${promedioAlumnoModelo.promedioOraciones}"/>%
+                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioOraciones ne null}" value="${promedioAlumnoModelo.promedioOraciones} %"/>
                                                 <h:outputText rendered="#{promedioAlumnoModelo.promedioOraciones eq null}" styleClass="uk-icon" pt:uk-icon="ban"/>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="uk-text-left">#{profesor['tareas.alumno.map.match']}</td>
                                             <td>
-                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioRelacionarImagen ne null}" value="${promedioAlumnoModelo.promedioRelacionarImagen}"/>%
+                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioRelacionarImagen ne null}" value="${promedioAlumnoModelo.promedioRelacionarImagen} %"/>
                                                 <h:outputText rendered="#{promedioAlumnoModelo.promedioRelacionarImagen eq null}" styleClass="uk-icon" pt:uk-icon="ban"/>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="uk-text-left">#{profesor['tareas.alumno.map.filling']}</td>
                                             <td>
-                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioCompletar ne null}" value="${promedioAlumnoModelo.promedioCompletar}"/>%
+                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioCompletar ne null}" value="${promedioAlumnoModelo.promedioCompletar} %"/>
                                                 <h:outputText rendered="#{promedioAlumnoModelo.promedioCompletar eq null}" styleClass="uk-icon" pt:uk-icon="ban"/>
 
                                             </td>
@@ -329,7 +329,7 @@
                                         <tr>
                                             <td class="uk-text-left">#{profesor['tareas.alumno.map.mental']}</td>
                                             <td>
-                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioPromedioMapamental ne null}" value="${promedioAlumnoModelo.promedioPromedioMapamental}"/>%
+                                                <h:outputText rendered="#{promedioAlumnoModelo.promedioPromedioMapamental ne null}" value="${promedioAlumnoModelo.promedioPromedioMapamental} %"/>
                                                 <h:outputText rendered="#{promedioAlumnoModelo.promedioPromedioMapamental eq null}" styleClass="uk-icon" pt:uk-icon="icon ban"/>
                                             </td>
                                         </tr>
