--- a/tecolotl-web/src/main/webapp/ingreso.xhtml
+++ b/tecolotl-web/src/main/webapp/ingreso.xhtml
@@ -46,6 +46,7 @@
             </form>
         </div>
     </div>
+    <div id="content-empty" class="uk-hidden"></div>
     <script type="application/javascript">
         var mensaje = "#{alumno['login.valid.password']}";
     </script>
