enlaces al storage profesor, coordinador, alumno y administracion

--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -455,6 +455,7 @@
                 }
             }
         </script>
-        <h:outputScript library="js" name="/coordinador/zona-horaria.js"/>
+        <ui:remove><h:outputScript library="js" name="/coordinador/zona-horaria.js"/></ui:remove>
+        <script src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/coordinador/zona-horaria.js"></script>
     </ui:define>
 </ui:composition>
