--- a/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/heredar-alumno.xhtml
@@ -215,7 +215,12 @@
         </h:form>
     </ui:define>
     <ui:define name="file-js">
+        <ui:remove>
         <h:outputScript library="js" name="/administracion/heredar-alumno.js"/>
         <h:outputScript library="js" name="/administracion/filtro-tabla.js"/>
+        </ui:remove>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/heredar-alumno.js"></script>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/filtro-tabla.js"></script>
+
     </ui:define>
 </ui:composition>
